// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android SearchBar component should render with a custom cancel icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={25}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render with a custom cancel icon component 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={25}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render with a custom clear icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={25}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render with a custom clear icon component 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={25}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render with a custom methods 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={25}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[MockFunction]}
    onChangeText={[Function]}
    onClear={[MockFunction]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render with a custom search icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={50}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render with a custom search icon component 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={<Component />}
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render with loading 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={25}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#999999"
          hidesWhenStopped={true}
          size="small"
          style={
            Object {
              "flex": 1,
              "marginRight": 5,
            }
          }
        />
      </Component>
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render without cancel icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={25}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render without clear icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={25}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render without issues 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={
      <Themed.Icon
        color="rgba(0, 0, 0, 0.54)"
        name="magnify"
        size={25}
        type="material-community"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;

exports[`Android SearchBar component should render without search icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "paddingBottom": 8,
      "paddingTop": 8,
      "width": 750,
    }
  }
>
  <ForwardRef(Themed.Input)
    inputContainerStyle={
      Object {
        "borderBottomWidth": 0,
        "width": 750,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 24,
        "marginRight": 8,
      }
    }
    leftIcon={null}
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
        },
      }
    }
  />
</Component>
`;
